# meta-mail-ingress

./: .dockerignore  Cargo.toml  Dockerfile  config.toml
.github/workflows/: continuous-deployment.yaml  continuous-integration.yaml
cloudflare-worker/: package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.toml
cloudflare-worker/src/: index.ts
src/: cli.rs  config.rs  error.rs  handler.rs  http.rs  main.rs  postprocess.rs  tracing.rs
src/api/: v1.rs
