[package]
name = "meta-mail-ingress"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
aws-config = { version = "1.4.0", default-features = false, features = ["client-hyper", "rustls", "rt-tokio"] }
aws-sdk-s3 = "1.29.0"
axum = { version = "0.7.5", features = ["macros"] }
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
listenfd = "1.0.1"
mail-parser = "0.9.3"
miette = { version = "7.2.0", features = ["fancy"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.117"
sha2 = { version = "0.10.8", features = ["asm"] }
tempfile = "3.10.1"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "compression-full"] }
tracing = "0.1.40"
tracing-opentelemetry = { version = "0.23.0", features = ["thiserror"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tree_magic_mini = { version = "3.1.4", features = ["with-gpl-data"] }
url = { version = "2.5.0", features = ["serde"] }

[profile.release]
lto = "fat"
strip = "debuginfo"
panic = "abort"
opt-level = "z"
codegen-units = 1
